# sysmon-gui

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CpuPanel.tsx  DiskPanel.tsx  MemoryPanel.tsx  ProcessTable.tsx
