[package]
name = "sysmon-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "sysmon_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sysmon-gui"
path = "src/main.rs"

[dependencies]
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
